platform/loki/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loki
  labels:
    app.kubernetes.io/part-of: observability
    app.kubernetes.io/component: logging
